# Todo-App-FastAPI

./: .env  pyproject.toml
todo_app_fastapi/: main.py  setting.py
