[tool.poetry]
name = "todo-app-fastapi"
version = "0.1.0"
description = ""
authors = ["Waqar Aslam <waqar.king10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"
psycopg = "^3.1.18"
pytest = "^8.1.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
